# Valuation-AI

./: .gitignore  extraction_results.json  extraction_results2.json  pyproject.toml  readme.md  requirements2.txt  starter.sh  test_extractor.py  vz_2023_isotra_report.docx  ~$_2023_isotra_report.docx
backend/: cli.py  main.py  main_run_valuation.py  requirements.txt
backend/config/: settings.py
backend/data/: report_output.docx
backend/script_results/: index.html
backend/src/api/: main.py
backend/src/api/routers/: valuations.py
backend/src/dcf/: calculator.py
backend/src/financials/: extractor.py  extractor2.py  extractor_old.py  financial_data.json  financial_data.xlsx  fullPrompt.txt  validation_results.json
backend/src/ocr/: features.md  mistral_processor.py  processing.py
backend/src/reporting/: generator.py  todo.md
backend/src/valuation/: valuator.py
backend/temp_cli_results/: financial_data.json  html_content.html  result_valuation.json
backend/tests/: testWorkflow.py  test_financials.py  test_ocr.py
backend/tests/results/: output.html  output2.html  output_vz_2021_isotra.html  output_vz_2022_isotra.html
scripts/: differ.py  mistral_ocr.py  tree.py
